Update sample.env, Makefile to show current deploy

--- a/sample.env
+++ b/sample.env
@@ -3,4 +3,4 @@ AWS_SECRET_ACCESS_KEY=<redacted>
 AWS_REGION=us-east-1
 S3_BUCKET=<redacted>
 STACK_NAME=marblecutter-virtual
-DOMAIN_NAME=<redacted>
+DOMAIN_NAME=tiles.mpgranch.com
